# 9l

./: README.md
9le/9lec/: CMakeLists.txt  client.cpp  client.h  main.cpp
9le/9les/: CMakeLists.txt  main.cpp  server.cpp  server.h
accomplice/accompliceC/: CMakeLists.txt  accompliceC.pro  client.cpp  client.h  main.cpp
accomplice/accompliceS/: CMakeLists.txt  accompliceS.pro  main.cpp  server.cpp  server.h
acuping/acupingC/: CMakeLists.txt  acupingC.pro  client.cpp  client.h  main.cpp
acuping/acupingS/: CMakeLists.txt  acupingS.pro  main.cpp  server.cpp  server.h
callback/callbackC/: CMakeLists.txt  callbackC.pro  client.cpp  client.h  main.cpp
callback/callbackS/: CMakeLists.txt  callbackS.pro  main.cpp  server.cpp  server.h
initdirs/: initdirs.bat  initdirs.sh
kick/kickC/: CMakeLists.txt  client.cpp  client.h  main.cpp
kick/kickS/: CMakeLists.txt  kickS.pro  main.cpp  server.cpp  server.h
script/: create.py  dearhive.py  mike.py  nodup.py  sally.py  seenodes.py
